--- a/gitHub POC/src/classes/testANT.cls
+++ b/gitHub POC/src/classes/testANT.cls
@@ -3,7 +3,7 @@ public class testANT{
     	//--------master code-------//
     	system.debug('Master Code');
     	
-    	//----------feature1----------//  
+    	//----------New feature1----------//  
     	system.debug('Feature1 is being modified');  
         system.debug('Modified Code is pusing into Branch- feature 1');         
                        
