added changes to deploy folder

--- a/gitHub POC/src/classes/testANT.cls
+++ b/gitHub POC/src/classes/testANT.cls
@@ -1,7 +1,7 @@
 public class testANT{
     static{
     	//--------master code-------//
-    	system.debug('Master Code');
+    	system.debug('Master Code update');
     	    	                      
     }
 }
